# Tiger-Compiler

./: .gitignore  LICENSE  README.md  Setup.hs  Tiger-Compiler.cabal  cabal.project  cabal.project.freeze  hie.yaml  package.yaml  runtime.c  stack.yaml
app/: Main.hs
cabal-helper0.8.0.0-Cabal2.0.1.0.build/: Main.hi
cabal-helper0.8.0.0-Cabal2.0.1.0.build/CabalHelper/Runtime/: Licenses.hi
cabal-helper0.8.0.0-Cabal2.0.1.0.build/CabalHelper/Shared/: Common.hi  InterfaceTypes.hi  Sandbox.hi
src/: Canonical.hs  ContEff.hs  Coroutine.hs  Env.hs  Frame.hs  IR.hs  Id.hs  Interpreter.hs  SrcLoc.hs  State.hs  Tiger.hs  Unique.hs  UniqueID.hs
src/AbstSyntax/: TH.hs
src/Backend/X86/: Arch.hs  Codegen.hs  Frame.hs  Liveness.hs
src/Compiler/: Backend.hs  Exception.hs  Frontend.hs  Intermediate.hs
src/Compiler/Backend/: X86.hs
src/Compiler/Backend/X86/: Arch.hs  Codegen.hs  File.hs  Frame.hs  Liveness.hs  RegisterAllocation.hs
src/Compiler/Backend/X86/RegisterAllocation/: CoalesceAllocation.hs  InterferenceGraph.hs  RegisterAllocator.hs  SimpleAllocation.hs
src/Compiler/Backend/X86/RegisterAllocation/Coalesce/: InterferenceGraph.hs  RegisterAllocator.hs
src/Compiler/Backend/X86/RegisterAllocation/Coalesce/InterferenceGraph/: Base.hs  Immutable.hs  Mutable.hs
src/Compiler/Frontend/: AbstSyntax.hs  Coroutine.hs  Env.hs  Exception.hs  Id.hs  Lexer.hs  SrcLoc.hs
src/Compiler/Frontend/Language/: Tiger.hs
src/Compiler/Frontend/Language/Linear/: Eval.hs  LSyntax.hs  Lexer.x  Parser.y  Syntax.hs
src/Compiler/Frontend/Language/Tiger/: LSyntax.hs  Lexer.x  Parser.y  Semant.hs  Syntax.hs
src/Compiler/Frontend/Language/Tiger/Semant/: BreakPoint.hs  Env.hs  Exp.hs  Level.hs  MarkEscape.hs  Translate.hs  TypeCheck.hs  Types.hs
src/Compiler/Utils/: Coroutine.hs  Display.hs  Graph.hs  Maybe.hs  String.hs
src/Compiler/Utils/Graph/: Base.hs  Immutable.hs  Mutable.hs
src/Frontend/: AbstSyntax.hs  Coroutine.hs  Env.hs  Id.hs  Lexer.hs  SrcLoc.hs
src/Frontend/Language/Linear/: Eval.hs  LSyntax.hs  Lexer.x  Parser.y  Syntax.hs
src/Frontend/Language/Tiger/: LSyntax.hs  Lexer.x  Parser.y  Semant.hs  Syntax.hs
src/Frontend/Language/Tiger/Semant/: BreakPoint.hs  Env.hs  Exp.hs  Level.hs  MarkEscape.hs  Translate.hs  TypeCheck.hs  Types.hs
src/Lexer/: Alex.hs  Monad.hs
src/Linear/: Eval.hs  Interpreter.hs  LSyntax.hs  Lexer.x  Linear.hs  Parser.y  Syntax.hs
src/Tiger/: Eval.hs  LSyntax.hs  Lexer.x  Parser.y  Semant.hs  Syntax.hs  Typing.hs
src/Tiger/Semant/: BreakPoint.hs  Env.hs  Exp.hs  Level.hs  MarkEscape.hs  Translate.hs  TypeCheck.hs  Types.hs  Typing.hs
src/Tiger/test/: merge.tig
src/X86/: Arch.hs  Codegen.hs  Frame.hs  Liveness.hs
test/: CanonicalSpec.hs  FrameMock.hs  Spec.hs  TestUtils.hs
test/Backend/X86/: CodegenSpec.hs
test/Compiler/Backend/X86/: CodegenSpec.hs  IntegrationTigerSpec.hs  IntegratoinTigerSpec.hs  IntermediateMock.hs  LivenessSpec.hs  RegisterAllocationSpec.hs
test/Compiler/Backend/X86/RegisterAllocation/: CoalesceAllocationSpec.hs  InterferenceGraphSpec.hs  SimpleAllocationSpec.hs
test/Compiler/Backend/X86/RegisterAllocation/Coalesce/: InterferenceGraphSpec.hs
test/Compiler/Backend/X86/RegisterAllocation/Coalesce/InterferenceGraph/: MutableSpec.hs
test/Compiler/Frontend/: EnvSpec.hs  FrameMock.hs  SrcLocSpec.hs
test/Compiler/Frontend/Language/Linear/: EvalSpec.hs  LexerSpec.hs  ParserSpec.hs
test/Compiler/Frontend/Language/Tiger/: IntegrationSpec.hs  LexerSpec.hs  ParserSpec.hs  Samples.hs  SemantSpec.hs  TestUtils.hs
test/Compiler/Frontend/Language/Tiger/Semant/: LevelSpec.hs  MarkEscapeSpec.hs  TypeCheckSpec.hs
test/Compiler/Frontend/Language/Tiger/Semant/Translate/: ArraySpec.hs  ExpSpec.hs  IfSpec.hs  LoopSpec.hs  RecordSpec.hs  SeqLetSpec.hs  VariableSpec.hs
test/Compiler/Frontend/Language/Tiger/samples/: for.tig  if.tig  isdigit.tig  printboard.tig  printint.tig  readint.tig  skipto.tig
test/Compiler/Utils/: MaybeSpec.hs
test/Compiler/Utils/Graph/: ImmutableSpec.hs  MutableSpec.hs
test/Frontend/: FrameMock.hs
test/Frontend/Language/Linear/: EvalSpec.hs  LexerSpec.hs  ParserSpec.hs
test/Frontend/Language/Linear/samples/: test.ln
test/Frontend/Language/Tiger/: IntegrationSpec.hs  LexerSpec.hs  ParserSpec.hs  SemantSpec.hs  TestUtils.hs
test/Frontend/Language/Tiger/Semant/: LevelSpec.hs  MarkEscapeSpec.hs  TypeCheckSpec.hs
test/Linear/: EvalSpec.hs  LexerSpec.hs  ParserSpec.hs  Test.hs
test/Linear/samples/: test.ln
test/Tiger/: IntegrationSpec.hs  LexerSpec.hs  ParserSpec.hs  SemantSpec.hs  Test.hs  TestUtils.hs  TypingSpec.hs
test/Tiger/Semant/: LevelSpec.hs  MarkEscapeSpec.hs  TranslateSpec.hs  TypeCheckSpec.hs  TypesSpec.hs  TypingSpec.hs
test/Tiger/samples/: invalid_rectype.tig
test/X86/: CodegenSpec.hs
