cabal-version: 2.4

name:           Tiger-Compiler
version:        0.1.0.0
synopsis:       Short description of your package
description:    Please see the README on Github at <https://github.com/forestaa/Tiger-Compiler#readme>
homepage:       https://github.com/forestaa/Tiger-Compiler#readme
bug-reports:    https://github.com/forestaa/Tiger-Compiler/issues
author:         Daichi Morita
maintainer:     t.daichi.3@gmail.com
copyright:      2017 Daichi Morita
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/forestaa/Tiger-Compiler

common deps
  build-depends:
      base >=4.7 && <5
    , bytestring
    , containers
    , extensible
    , extensible-skeleton
    , lens
    , monad-skeleton
    , mtl
    , rio
    , transformers

common default
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    DataKinds
    DuplicateRecordFields
    GADTs
    LambdaCase
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedLabels
    OverloadedRecordDot
    RecordWildCards
    TupleSections
    TypeFamilies
    TypeFamilyDependencies
  default-language: GHC2021

library
  import: deps, default
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wredundant-constraints -fno-warn-unticked-promoted-constructors -fno-warn-name-shadowing
  build-depends:
      array
    , template-haskell
  build-tool-depends: alex:alex, happy:happy
  exposed-modules:
      Backend.X86.Arch
      Backend.X86.Codegen
      Backend.X86.Frame
      Backend.X86.Liveness
      Frontend.AbstSyntax
      Frontend.Coroutine
      Frontend.Env
      Frontend.Id
      Frontend.Language.Linear.Eval
      Frontend.Language.Linear.Lexer
      Frontend.Language.Linear.LSyntax
      Frontend.Language.Linear.Parser
      Frontend.Language.Linear.Syntax
      Frontend.Lexer
      Frontend.SrcLoc
      Frontend.Language.Tiger.Lexer
      Frontend.Language.Tiger.LSyntax
      Frontend.Language.Tiger.Parser
      Frontend.Language.Tiger.Semant
      Frontend.Language.Tiger.Semant.BreakPoint
      Frontend.Language.Tiger.Semant.Env
      Frontend.Language.Tiger.Semant.Exp
      Frontend.Language.Tiger.Semant.Level
      Frontend.Language.Tiger.Semant.MarkEscape
      Frontend.Language.Tiger.Semant.Translate
      Frontend.Language.Tiger.Semant.TypeCheck
      Frontend.Language.Tiger.Semant.Types
      Frontend.Language.Tiger.Syntax
      Intermediate.Canonical
      Intermediate.Frame
      Intermediate.IR
      Intermediate.Unique
  other-modules:
      Paths_Tiger_Compiler

executable compiler-exe
  import: deps, default
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      Tiger-Compiler
  other-modules:
      Paths_Tiger_Compiler

test-suite compiler-test
  import: deps, default
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:
      hspec-discover:hspec-discover
  build-depends:
      Tiger-Compiler
    , hspec
  other-modules:
      Backend.X86.CodegenSpec
      Frontend.FrameMock
      Frontend.Language.Linear.EvalSpec
      Frontend.Language.Linear.LexerSpec
      Frontend.Language.Linear.ParserSpec
      Frontend.Language.Tiger.IntegrationSpec
      Frontend.Language.Tiger.LexerSpec
      Frontend.Language.Tiger.ParserSpec
      Frontend.Language.Tiger.Semant.LevelSpec
      Frontend.Language.Tiger.Semant.MarkEscapeSpec
      Frontend.Language.Tiger.Semant.TypeCheckSpec
      Frontend.Language.Tiger.SemantSpec
      Frontend.Language.Tiger.TestUtils
      Intermediate.CanonicalSpec
      Paths_Tiger_Compiler
