cabal-version: 2.4

name:           Tiger-Compiler
version:        0.1.0.0
synopsis:       Short description of your package
description:    Please see the README on Github at <https://github.com/forestaa/Tiger-Compiler#readme>
homepage:       https://github.com/forestaa/Tiger-Compiler#readme
bug-reports:    https://github.com/forestaa/Tiger-Compiler/issues
author:         Daichi Morita
maintainer:     t.daichi.3@gmail.com
copyright:      2017 Daichi Morita
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/forestaa/Tiger-Compiler

common deps
  build-depends:
      base >=4.7 && <5
    , bytestring
    , containers
    , data-vector-growable
    , extensible
    , extensible-skeleton
    , multiset
    , mtl
    , optparse-applicative
    , path
    , primitive
    , rio
    , safe-exceptions
    , vector

common default
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    DataKinds
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    LambdaCase
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PartialTypeSignatures
    RecordWildCards
    TupleSections
    TypeFamilies
    TypeFamilyDependencies
  default-language: GHC2021

library
  import: deps, default
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wno-unticked-promoted-constructors -Wno-name-shadowing -Wno-partial-type-signatures
  build-depends:
      array
    , template-haskell
  build-tool-depends: alex:alex, happy:happy
  exposed-modules:
      Compiler.Backend
      Compiler.Backend.X86
      Compiler.Backend.X86.Arch
      Compiler.Backend.X86.Codegen
      Compiler.Backend.X86.Frame
      Compiler.Backend.X86.File
      Compiler.Backend.X86.Liveness
      Compiler.Backend.X86.RegisterAllocation
      Compiler.Backend.X86.RegisterAllocation.CoalesceAllocation
      Compiler.Backend.X86.RegisterAllocation.Coalesce.InterferenceGraph
      Compiler.Backend.X86.RegisterAllocation.Coalesce.InterferenceGraph.Base
      Compiler.Backend.X86.RegisterAllocation.Coalesce.InterferenceGraph.Immutable
      Compiler.Backend.X86.RegisterAllocation.Coalesce.InterferenceGraph.Mutable
      Compiler.Backend.X86.RegisterAllocation.Coalesce.RegisterAllocator
      Compiler.Backend.X86.RegisterAllocation.InterferenceGraph
      Compiler.Backend.X86.RegisterAllocation.RegisterAllocator
      Compiler.Backend.X86.RegisterAllocation.SimpleAllocation
      Compiler.Exception
      Compiler.Frontend
      Compiler.Frontend.AbstSyntax
      Compiler.Frontend.Env
      Compiler.Frontend.Exception
      Compiler.Frontend.Id
      Compiler.Frontend.Language.Linear.Eval
      Compiler.Frontend.Language.Linear.Lexer
      Compiler.Frontend.Language.Linear.LSyntax
      Compiler.Frontend.Language.Linear.Parser
      Compiler.Frontend.Language.Linear.Syntax
      Compiler.Frontend.Language.Tiger.Lexer
      Compiler.Frontend.Language.Tiger.LSyntax
      Compiler.Frontend.Language.Tiger.Parser
      Compiler.Frontend.Language.Tiger.Semant
      Compiler.Frontend.Language.Tiger.Semant.BreakPoint
      Compiler.Frontend.Language.Tiger.Semant.Env
      Compiler.Frontend.Language.Tiger.Semant.Exp
      Compiler.Frontend.Language.Tiger.Semant.Level
      Compiler.Frontend.Language.Tiger.Semant.MarkEscape
      Compiler.Frontend.Language.Tiger.Semant.Translate
      Compiler.Frontend.Language.Tiger.Semant.TypeCheck
      Compiler.Frontend.Language.Tiger.Semant.Types
      Compiler.Frontend.Language.Tiger.Syntax
      Compiler.Frontend.Language.Tiger
      Compiler.Frontend.Lexer
      Compiler.Frontend.SrcLoc
      Compiler.Intermediate
      Compiler.Intermediate.Canonical
      Compiler.Intermediate.Frame
      Compiler.Intermediate.IR
      Compiler.Intermediate.Unique
      Compiler.Utils.Coroutine
      Compiler.Utils.Display
      Compiler.Utils.Graph.Base
      Compiler.Utils.Graph.Mutable
      Compiler.Utils.Graph.Immutable
      Compiler.Utils.Maybe
      Compiler.Utils.String
  other-modules:
      Paths_Tiger_Compiler

executable compiler-exe
  import: deps, default
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      Tiger-Compiler
  other-modules:
      Paths_Tiger_Compiler

test-suite compiler-test
  import: deps, default
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wno-unticked-promoted-constructors -Wno-name-shadowing -Wno-partial-type-signatures
  build-tool-depends:
      hspec-discover:hspec-discover
  build-depends:
      Tiger-Compiler
    , hspec
  other-modules:
      Compiler.Backend.X86.CodegenSpec
      Compiler.Backend.X86.IntegrationTigerSpec
      Compiler.Backend.X86.IntermediateMock
      Compiler.Backend.X86.LivenessSpec
      Compiler.Backend.X86.RegisterAllocation.Coalesce.InterferenceGraphSpec
      Compiler.Backend.X86.RegisterAllocation.Coalesce.InterferenceGraph.MutableSpec
      Compiler.Backend.X86.RegisterAllocation.CoalesceAllocationSpec
      Compiler.Backend.X86.RegisterAllocation.InterferenceGraphSpec
      Compiler.Backend.X86.RegisterAllocation.SimpleAllocationSpec
      Compiler.Frontend.FrameMock
      Compiler.Frontend.Language.Linear.EvalSpec
      Compiler.Frontend.Language.Linear.LexerSpec
      Compiler.Frontend.Language.Linear.ParserSpec
      Compiler.Frontend.Language.Tiger.IntegrationSpec
      Compiler.Frontend.Language.Tiger.LexerSpec
      Compiler.Frontend.Language.Tiger.ParserSpec
      Compiler.Frontend.Language.Tiger.Samples
      Compiler.Frontend.Language.Tiger.Semant.LevelSpec
      Compiler.Frontend.Language.Tiger.Semant.MarkEscapeSpec
      Compiler.Frontend.Language.Tiger.Semant.TypeCheckSpec
      Compiler.Frontend.Language.Tiger.Semant.Translate.ArraySpec
      Compiler.Frontend.Language.Tiger.Semant.Translate.ExpSpec
      Compiler.Frontend.Language.Tiger.Semant.Translate.IfSpec
      Compiler.Frontend.Language.Tiger.Semant.Translate.LoopSpec
      Compiler.Frontend.Language.Tiger.Semant.Translate.RecordSpec
      Compiler.Frontend.Language.Tiger.Semant.Translate.SeqLetSpec
      Compiler.Frontend.Language.Tiger.Semant.Translate.VariableSpec
      Compiler.Frontend.Language.Tiger.TestUtils
      Compiler.Frontend.SrcLocSpec
      Compiler.Intermediate.CanonicalSpec
      Compiler.Intermediate.Unique.TestUtils
      Compiler.Utils.Graph.MutableSpec
      Compiler.Utils.Graph.ImmutableSpec
      Compiler.Utils.MaybeSpec
      Paths_Tiger_Compiler
